update heap greater